memo/memo-with-references/tests/7-expected-an-ident.rs
use memo_with_references::memo;

#[memo(123)]
fn memome(cache: &'a str) {}

fn main() {}
